--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,6 @@ body {
 }
 
 .container {
-  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,7 +89,6 @@ h1 {
  */
 
 .deck {
-  z-index: 4;
   width: 100%;
   max-width: 600px;
   min-height: 680px;
@@ -106,7 +104,6 @@ h1 {
 }
 
 .aside {
-  z-index: 3;
   display: inline-block;
   height: 200px;
   width: 100%;
@@ -304,7 +301,7 @@ sticking together */
 }
 
 /*Adjust deck size from this screen width and above to optimize on space */
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 640px) and (max-width: 1348px) {
   .main{
     width:90%;
   }
